--- a/src/scss/Public/public.scss
+++ b/src/scss/Public/public.scss
@@ -1,6 +1,5 @@
 @import "icons";
 
-
 .author_bio_main_wrap {
   margin-top: 100px;
   border: 1px solid #ededed70;
@@ -39,8 +38,17 @@
     font-weight: bold;
   }
   .author_bio_socials {
-    padding: 26px 0px 0px 0px;
+    padding: 13px 0px 0px 0px;
     text-align: center;
+    display: flex;
+    justify-content: space-around;
+    i.authbio-instagrem {
+      border-radius: 17px;
+      font-size: 17px;
+      background: #7d7da5;
+      color: white;
+      padding: 6px 6px 3px 7px;
+    }
     a{
       font-size: 32px;
       color: #7d7da5;
