--- a/src/scss/Public/public.scss
+++ b/src/scss/Public/public.scss
@@ -7,7 +7,7 @@
   border-radius: 7px;
   flex-wrap: wrap;
 
-  h1.author_name {
+  h3.author_name {
     margin-bottom: 0px;
   }
 
@@ -22,6 +22,7 @@
 
     img {
       border-radius: 83px;
+      margin-top: -7px;
     }
 
   }
@@ -85,7 +86,7 @@
 
   .author_bio_left_col {
     .avater-image {
-      width: 140px;
+      width: 130px;
       margin: auto;
     }
     .author_bio_socials {
@@ -102,7 +103,7 @@
     }
   }
   .socials_template1{
-    margin-top: -12px;
+    margin-top: -4px;
   }
 
   .author_bio_socials {
@@ -124,24 +125,18 @@
 //recent content CSS
 
 .author_bio_recent_main_links {
+  display: flex;
   .auth_bio_recent_left {
-    -webkit-box-flex: 1;
-    flex: 1 0 0px;
     padding: 7px 0 0 0;
-
   }
   .auth_bio_avatar {
     width: 99px;
     float: left;
-    margin-right: 23px;
-    margin-top: -20px;
   }
   .auth_bio_avatar img{
     border-radius: 83px;
   }
   .auth_bio_recent_right_col {
-    -webkit-box-flex: 3;
-    flex: 3 0 0;
     padding: 0 0 0 14px;
     box-shadow: none !important;
     text-decoration: none !important;
@@ -152,15 +147,15 @@
 
 p.author_bio_more_post {
   font-weight: bold;
+    margin-bottom: 10px;
 }
 .author_bio_recent_main {
   display: flex;
   flex-wrap: wrap;
 
   .author_bio_recent_inner_post {
-    width: 172px;
-    flex: 1;
-    margin-right: 15px;
+    width: 142px;
+    margin-right: auto;
 
     .auth_post_recent_img {
       min-width: 151px;
