shortcode avatar logo issue fixed

--- a/src/scss/Public/public.scss
+++ b/src/scss/Public/public.scss
@@ -233,6 +233,7 @@ div#auth_recent_tab {
     img {
       width: 120px;
       border-radius: 69px;
+      min-height:122px;
     }
   }
   .authbio_short_right_col {
